--- a/MyProjects/Angular/SportsStore/src/app/app.component.html
+++ b/MyProjects/Angular/SportsStore/src/app/app.component.html
@@ -1,2 +1,4 @@
 
-<div *ngFor="let product in products">{{product.Id}}</div>
+<div *ngFor="let product of products;">
+    <span>{{product.id}}</span>
+</div>
