--- a/MyProjects/Angular/SportsStore/src/app/store/store.component.html
+++ b/MyProjects/Angular/SportsStore/src/app/store/store.component.html
@@ -2,7 +2,7 @@
     <a class="navbar-brand">SPORTS STORE</a>
 </div>
 <div class="col-xs-3 bg-info p-a-1">
-    {{categories.length}}
+    {{categories.length}} Categories
 </div>
 <div class="col-xs-9 bg-success p-a-1">
     {{products.length}} Products
