--- a/MyProjects/Angular/SportsStore/src/app/app.component.html
+++ b/MyProjects/Angular/SportsStore/src/app/app.component.html
@@ -1,13 +1,15 @@
-<div class="row">
-    <div class="m-a-10 col-sm-4">
+<div class="row p-2">
+    <div class="m-a-10 col">
         <button class="btn btn-primary float-right" (click)="SwitchCreate()">Создать</button>
     </div>
-    <div class="m-a-10 col-sm-4">
+    <div class="m-a-10 col">
         <button class="btn btn-primary" (click)="SwitchShow()">Просмотр</button>
     </div>
 </div>
 
-    <div calss="col-8 col-offset-5">
+<div class="container">
+    <div calss="row justify-content-center">
         <create-comp *ngIf="renderCreate"></create-comp>
         <show-comp *ngIf="renderShow"></show-comp>
     </div>
+</div>
