--- a/MyProjects/Angular/SportsStore/src/app/show/show.component.html
+++ b/MyProjects/Angular/SportsStore/src/app/show/show.component.html
@@ -1,3 +1,20 @@
-<div>
-    Компонент просмотра
+<div class="col">
+    <table class="table table-stripped table-hover">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Short Description</th>
+                <th>Image</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Name #1</td>
+                <td>Short Description #1</td>
+                <td>Image #1</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
