--- a/MyProjects/Angular/SportsStore/src/app/app.component.html
+++ b/MyProjects/Angular/SportsStore/src/app/app.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="container">
-    <div calss="row justify-content-center">
+    <div calss="row">
         <create-comp *ngIf="renderCreate"></create-comp>
         <show-comp *ngIf="renderShow"></show-comp>
     </div>
