--- a/MyProjects/Angular/SportsStore/src/app/create/create.component.html
+++ b/MyProjects/Angular/SportsStore/src/app/create/create.component.html
@@ -1,8 +1,8 @@
-<div class="col text-center">
+<div class="col text-center" style="background-color: bisque;">
     Компонент создания
 
 
-    <div class="container p-2" style="background-color: bisque;">
+    <div class="container p-2">
         <div class="col-3 float-right m-0" style="background-color: cadetblue;">
             <img class="img-thumbnail" src="" alt="some.jpg" />
         </div>
