--- a/MyProjects/Angular/SportsStore/src/app/show/detail/detail.component.html
+++ b/MyProjects/Angular/SportsStore/src/app/show/detail/detail.component.html
@@ -1,8 +1,7 @@
-<div class="col text-center">
-    Компонент создания
+<div class="col" style="background-color: bisque;">
+    <p class="text-center">Компонент детального просмотра</p>
 
-
-    <div class="container p-2" style="background-color: bisque;">
+    <div class="container p-2" style="overflow: auto;">
         <div class="col-3 float-right m-0" style="background-color: cadetblue;">
             <img class="img-thumbnail" src="" alt="some.jpg" />
         </div>
@@ -57,6 +56,6 @@
                 </div>
             </div>
         </div>
-        <a class=" col btn btn-primary" style="color: white;" href="#">Изменить</a>
+        <a class="btn btn-primary float-right" style="color: white;" href="#">Изменить</a>
     </div>
 </div>
