--- a/MyProjects/SightMap/Views/Shared/_Layout.cshtml
+++ b/MyProjects/SightMap/Views/Shared/_Layout.cshtml
@@ -4,14 +4,13 @@
 <head>
   <meta name="viewport" content="width=device-width" />
   <base href="/">
+  <script src="~/jquery/jquery.min.js"></script>
   <title>@ViewBag.Title</title>
 </head>
 <body>
   <div>
     @RenderBody()
   </div>
-
-  @RenderSection("AngularScripts", false)
 
   <script src="~/dist/runtime-es2015.js" type="module"></script>
   <script src="~/dist/runtime-es5.js" nomodule defer></script>
