--- a/MyProjects/SightMap/src/app/show/detail/detail.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/detail.component.html
@@ -7,55 +7,59 @@
         </div>
         <div class="col">
 
-            <div class="form-group row">
+            <div class="form-group row blocked">
                 <label class="col-1 col-form-label" for="Id">Id</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="Id" [value]="sight.Id" readonly />
+                    <input class="form-control" type="text" id="Id" [value]="sight.id" readonly/>
                 </div>
             </div>
 
             <div class="form-group row">
                 <label class="col-1 col-form-label" for="Name">Name</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="Name" [value]="sight.Name" readonly/>
+                    <input class="form-control" type="text" id="Name" [value]="sight.name" [readonly]="isReadOnly"/>
                 </div>
             </div>
 
             <div class="form-group row">
                 <label class="col-1 col-form-label" for="ShortDesc">ShortDesc</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="ShortDesc" [value]="sight.ShortDescription" readonly/>
+                    <input class="form-control" type="text" id="ShortDesc" [value]="sight.shortDescription" [readonly]="isReadOnly"/>
                 </div>
             </div>
 
             <div class="form-group row">
                 <label class="col-1 col-form-label" for="FullDesc">FullDesc</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="FullDesc" [value]="sight.FullDescription" readonly/>
+                    <input class="form-control" type="text" id="FullDesc" [value]="sight.fullDescription" [readonly]="isReadOnly"/>
                 </div>
             </div>
 
-            <div class="form-group row">
+            <div class="form-group row blocked">
                 <label class="col-1 col-form-label" for="CreateDate">CreateDate</label>
                 <div class="col">
-                    <input class="form-control" type="date" id="CreateDate" [value]="sight.CreateDate" readonly/>
+                    <input class="form-control" type="date" id="CreateDate" [value]="sight.createDate" readonly/>
                 </div>
             </div>
 
-            <div class="form-group row">
+            <div class="form-group row blocked">
                     <label class="col-1 col-form-label" for="UpdateDate">UpdateDate</label>
                     <div class="col">
-                        <input class="form-control" type="date" id="UpdateDate" [value]="sight.UpdateDate" readonly/>
+                        <input class="form-control" type="date" id="UpdateDate" [value]="sight.updateDate" readonly/>
                     </div>
                 </div>
 
             <div class="form-group row">
-                <label class="col-1 col-form-label" for="Type">Type</label>
+                <label class="col-1 col-form-label" for="sight.type.id">Type</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="Type" [value]="sight.Type.Name" readonly/>
+                  <select class="form-control" id="sight.type.id" name="sight.type.id" [disabled]="isReadOnly">
+                    <option *ngFor="let type of typeResult.value" [value]="type.id" [text]="type.name" [selected]="type.id == sight.type.id">
+                    </option>
+                  </select>
                 </div>
             </div>
         </div>
-        <a class="btn btn-primary float-right" style="color: white;" href="#">Изменить</a>
+        <button class="btn btn-primary float-right m-1" (click)="switchEditBlock()">Изменить</button>
+        <button class="btn btn-primary float-right m-1" (click)="applyChanges()" [hidden]="isReadOnly">Применить</button>
     </div>
 </div>
