--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -5,35 +5,39 @@
         <div class="col-3 float-right m-0" style="background-color: cadetblue;">
             <img class="img-thumbnail" src="" alt="some.jpg" />
         </div>
-        <form class="col" method="post" [action]="dataService.basePath + dataService.apiSights" enctype="multipart/form-data">
+        <form id="sightForm" class="col" method="post" [action]="dataService.basePath + dataService.apiSights" enctype="multipart/form-data"
+              (ngSubmit)="addNewSight(newSight)">
 
             <div class="form-group row">
-                <label class="col-1 col-form-label" for="Name">Name</label>
+                <label class="col-1 col-form-label" for="name">Name</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="Name" name="Name" placeholder="Enter name" />
+                    <input class="form-control" type="text" id="name" name="name" placeholder="Enter name"
+                           [(ngModel)]="newSight.name" />
                 </div>
             </div>
 
             <div class="form-group row">
-                <label class="col-1 col-form-label" for="ShortDescription">ShortDesc</label>
+                <label class="col-1 col-form-label" for="shortDescription">ShortDesc</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="ShortDescription" name="ShortDescription" value="" placeholder="Short description..." />
+                    <input class="form-control" type="text" id="shortDescription" name="shortDescription" placeholder="Short description..."
+                           [(ngModel)]="newSight.shortDescription" />
                 </div>
             </div>
 
             <div class="form-group row">
-                <label class="col-1 col-form-label" for="FullDescription">FullDesc</label>
+                <label class="col-1 col-form-label" for="fullDescription">FullDesc</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="FullDescription" name="FullDescription" value="" placeholder="Full description..." />
+                    <input class="form-control" type="text" id="fullDescription" name="fullDescription" placeholder="Full description..."
+                           [(ngModel)]="newSight.fullDescription" />
                 </div>
             </div>
 
             <div class="form-group row">
                 <label class="col-1 col-form-label" for="type.id">Type</label>
                 <div class="col">
-                    <select class="form-control" id="type.id" name="type.id">
-                        <option selected>Choose type...</option>
-                        <option *ngFor="let type of dataService.typeResult.value" [value]="type.id" [text]="type.name">
+                    <select class="form-control" id="type.id" name="type.id" [(ngModel)]="newSight.type.id">
+                        <option value="undefined" selected>Choose type...</option>
+                        <option *ngFor="let type of dataService.getTypes()" [value]="type.id" [text]="type.name">
                         </option>
                     </select>
                 </div>
@@ -44,7 +48,7 @@
 
     <div class="container p-2 border">
         <p>Создать тип</p>
-        <form id="myForm" class="col" method="post" [action]="dataService.basePath + dataService.apiSightTypes" >
+        <form class="col" method="post" [action]="dataService.basePath + dataService.apiSightTypes" >
 
             <div class="form-group row">
                 <label class="col-1 col-form-label" for="Name">Name</label>
@@ -57,14 +61,3 @@
         </form>
     </div>
 </div>
-
-<script>
-  $('#myForm')
-    .ajaxForm({
-        url : '/api/sighttypes',
-        dataType : 'json',
-        success : function (response) {
-            alert("The server says: " + response);
-        }
-    });
-</script>
