--- a/MyProjects/SightMap/src/app/show/detail/detail.component.html
+++ b/MyProjects/SightMap/src/app/show/detail/detail.component.html
@@ -2,64 +2,68 @@
     <p class="text-center">Компонент детального просмотра</p>
 
     <div class="container p-2" style="overflow: auto;">
-        <div class="col-3 float-right m-0" style="background-color: cadetblue;">
-            <img class="img-thumbnail" src="" alt="some.jpg" />
-        </div>
-        <div class="col">
 
+        <form id="updateForm" class="col" method="post" [action]="dataService.apiSights" enctype="multipart/form-data"
+              (ngSubmit)="updateSight()">
             <div class="form-group row blocked">
-                <label class="col-1 col-form-label" for="Id">Id</label>
+                <label class="col-1 col-form-label" for="id">Id</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="Id" [value]="sight.id" readonly/>
+                    <input class="form-control" type="text" id="id" name="id" [value]="sight.id" readonly />
+                </div>
+                <div class="col-3">
+                    <img id="preview" class="img-thumbnail" height="200" [src]="sight.photoPath" alt="photo.jpg" />
+                    <input type="file" name="image" accept=".png .jpg .jpeg" value="" (change)="prepareImgPreview($event)" />
+                    <label class="form-label">Фото</label>
                 </div>
             </div>
 
             <div class="form-group row">
-                <label class="col-1 col-form-label" for="Name">Name</label>
+                <label class="col-1 col-form-label" for="name">Name</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="Name" [value]="sight.name" [readonly]="isReadOnly"/>
+                    <input class="form-control" type="text" id="name" name="name" [value]="sight.name" [readonly]="isReadOnly" />
                 </div>
             </div>
 
             <div class="form-group row">
-                <label class="col-1 col-form-label" for="ShortDesc">ShortDesc</label>
+                <label class="col-1 col-form-label" for="shortDesc">ShortDesc</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="ShortDesc" [value]="sight.shortDescription" [readonly]="isReadOnly"/>
+                    <input class="form-control" type="text" id="shortDesc" name="shortDescription" [value]="sight.shortDescription" [readonly]="isReadOnly" />
                 </div>
             </div>
 
             <div class="form-group row">
-                <label class="col-1 col-form-label" for="FullDesc">FullDesc</label>
+                <label class="col-1 col-form-label" for="fullDesc">FullDesc</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="FullDesc" [value]="sight.fullDescription" [readonly]="isReadOnly"/>
-                </div>
-            </div>
-
-            <div class="form-group row blocked">
-                <label class="col-1 col-form-label" for="CreateDate">CreateDate</label>
-                <div class="col">
-                    <input class="form-control" type="date" id="CreateDate" [value]="sight.createDate" readonly/>
+                    <input class="form-control" type="text" id="fullDesc" name="fullDescription" [value]="sight.fullDescription" [readonly]="isReadOnly" />
                 </div>
             </div>
 
             <div class="form-group row blocked">
-                    <label class="col-1 col-form-label" for="UpdateDate">UpdateDate</label>
-                    <div class="col">
-                        <input class="form-control" type="date" id="UpdateDate" [value]="sight.updateDate" readonly/>
-                    </div>
-                </div>
-
-            <div class="form-group row">
-                <label class="col-1 col-form-label" for="sight.type.id">Type</label>
+                <label class="col-1 col-form-label" for="createDate">CreateDate</label>
                 <div class="col">
-                  <select class="form-control" id="sight.type.id" name="sight.type.id" [disabled]="isReadOnly">
-                    <option *ngFor="let type of typeResult.value" [value]="type.id" [text]="type.name" [selected]="type.id == sight.type.id">
-                    </option>
-                  </select>
+                    <input class="form-control" type="date" id="createDate" name="createDate" [value]="sight.createDate" readonly />
                 </div>
             </div>
-        </div>
-        <button class="btn btn-primary float-right m-1" (click)="switchEditBlock()">Изменить</button>
-        <button class="btn btn-primary float-right m-1" (click)="applyChanges()" [hidden]="isReadOnly">Применить</button>
+
+            <div class="form-group row blocked">
+                <label class="col-1 col-form-label" for="updateDate">UpdateDate</label>
+                <div class="col">
+                    <input class="form-control" type="date" id="updateDate" name="updateDate" [value]="sight.updateDate" readonly />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label class="col-1 col-form-label" for="type.id">Type</label>
+                <div class="col">
+                    <select class="form-control" id="type.id" name="type.id" [disabled]="isReadOnly">
+                        <option *ngFor="let type of dataService.getTypes()" [value]="type.id" [text]="type.name" [selected]="type.id == sight.type.id">
+                        </option>
+                    </select>
+                </div>
+            </div>
+            <button class="btn btn-primary float-right m-1" type="button" (click)="switchEditBlock()">Изменить</button>
+            <button class="btn btn-primary float-right m-1" type="submit" [hidden]="isReadOnly">Применить</button>
+            <button class="btn btn-primary float-right m-1" type="button" (click)="deleteSight(sight.id)" [hidden]="isReadOnly">Удалить</button>
+        </form>
     </div>
 </div>
