--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -5,7 +5,7 @@
         <!--<div class="col-3 float-right m-0" style="background-color: cadetblue;">
             <img class="img-thumbnail" src="" alt="some.jpg" />
         </div>-->
-        <form id="sightForm" class="col" method="post" [action]="dataService.basePath + dataService.apiSights" enctype="multipart/form-data"
+        <form id="sightForm" class="col" method="post" [action]="dataService.apiSights" enctype="multipart/form-data"
               (ngSubmit)="addNewSight(newSight)">
 
             <div class="form-group row">
@@ -15,8 +15,8 @@
                            [(ngModel)]="newSight.name" />
                 </div>
                 <div class="col-3">
-                  <img id="preview" class="img-thumbnail" height="100" src="" hidden/>
-                  <input type="file" name="image" accept=".png .jpg .jpeg" value="" (change)="prepareImgPrevie($event)"/>
+                  <img id="preview" class="img-thumbnail" height="200" src="" hidden/>
+                  <input type="file" name="image" accept=".png .jpg .jpeg" value="" (change)="prepareImgPreview($event)"/>
                   <label class="form-label">Фото</label>
                 </div>
             </div>
