--- a/MyProjects/SightMap/src/app/show/show.component.html
+++ b/MyProjects/SightMap/src/app/show/show.component.html
@@ -1,4 +1,5 @@
 <div class="col">
+    <filter-comp (onApplyFilter)="updateSights($event)"></filter-comp>
     <table class="table table-stripped table-hover">
         <thead>
             <tr>
