--- a/MyProjects/SightMap/src/app/create/create.component.html
+++ b/MyProjects/SightMap/src/app/create/create.component.html
@@ -1,23 +1,30 @@
 <div class="col text-center" style="background-color: bisque;">
     <p>Компонент создания</p>
 
+    <style>
+        input.ng-dirty.ng-invalid {
+            border: 2px solid #ff0000
+        }
+
+        input.ng-dirty.ng-valid {
+            border: 2px solid #6bc502
+        }
+    </style>
     <div class="container p-2 border">
-        <!--<div class="col-3 float-right m-0" style="background-color: cadetblue;">
-            <img class="img-thumbnail" src="" alt="some.jpg" />
-        </div>-->
         <form id="sightForm" class="col" method="post" [action]="dataService.apiSights" enctype="multipart/form-data"
-              (ngSubmit)="addNewSight(newSight)">
+              (ngSubmit)="addNewSight(form)" novalidate #form="ngForm">
 
             <div class="form-group row">
                 <label class="col-1 col-form-label" for="name">Name</label>
                 <div class="col">
                     <input class="form-control" type="text" id="name" name="name" placeholder="Enter name"
-                           [(ngModel)]="newSight.name" />
+                           [(ngModel)]="newSight.name"
+                           required
+                           pattern="^[А-Яа-яA-Za-z ]{2,}" />
                 </div>
                 <div class="col-3">
-                  <img id="preview" class="img-thumbnail" height="200" src="" hidden/>
-                  <input type="file" name="image" accept=".png .jpg .jpeg" value="" (change)="prepareImgPreview($event)"/>
-                  <label class="form-label">Фото</label>
+                    <img id="preview" class="img-thumbnail" height="200" src="\img\empty.jpg" />
+                    <input type="file" name="image" accept=".png .jpg .jpeg" value="" (change)="prepareImgPreview($event)" />
                 </div>
             </div>
 
@@ -25,7 +32,9 @@
                 <label class="col-1 col-form-label" for="shortDescription">ShortDesc</label>
                 <div class="col">
                     <input class="form-control" type="text" id="shortDescription" name="shortDescription" placeholder="Short description..."
-                           [(ngModel)]="newSight.shortDescription" />
+                           [(ngModel)]="newSight.shortDescription"
+                           required
+                           pattern="^[А-Яа-яA-Za-z ]{5,}" />
                 </div>
             </div>
 
@@ -33,14 +42,16 @@
                 <label class="col-1 col-form-label" for="fullDescription">FullDesc</label>
                 <div class="col">
                     <input class="form-control" type="text" id="fullDescription" name="fullDescription" placeholder="Full description..."
-                           [(ngModel)]="newSight.fullDescription" />
+                           [(ngModel)]="newSight.fullDescription"
+                           required
+                           pattern="^[А-Яа-яA-Za-z ]{5,}" />
                 </div>
             </div>
 
             <div class="form-group row">
                 <label class="col-1 col-form-label" for="type.id">Type</label>
                 <div class="col">
-                    <select class="form-control" id="type.id" name="type.id" [(ngModel)]="newSight.type.id">
+                    <select class="form-control" id="type.id" name="type.id" [(ngModel)]="newSight.type.id" required pattern="^[1-9]+[0-9]{0,}">
                         <option value="undefined" selected>Choose type...</option>
                         <option *ngFor="let type of dataService.getTypes()" [value]="type.id" [text]="type.name">
                         </option>
@@ -53,12 +64,16 @@
 
     <div class="container p-2 border">
         <p>Создать тип</p>
-        <form class="col" method="post" [action]="dataService.basePath + dataService.apiSightTypes" >
+        <form id="createType" class="col" method="post" [action]="dataService.apiSightTypes"
+              (ngSubmit)="addNewType(formType)" novalidate #formType="ngForm">
 
             <div class="form-group row">
-                <label class="col-1 col-form-label" for="Name">Name</label>
+                <label class="col-1 col-form-label" for="name">Name</label>
                 <div class="col">
-                    <input class="form-control" type="text" id="Name" name="Name" placeholder="Enter name" />
+                    <input class="form-control" type="text" id="name" name="name" placeholder="Enter name"
+                           [(ngModel)]="newType.name"
+                           required
+                           pattern="^[А-Яа-яA-Za-z ]{2,}" />
                 </div>
             </div>
 
